Provide more information to consumable resources
Plumbs the database workflow run creation time and max-in-flight-per-workflow
to the consumable resource API.